[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    png = "0.17.5"
    rayon = "1.5.3"
    clap = { version = "3.2.8", features = ["derive"] }
    num-traits = "0.2.15"

[features]
    portable_simd = []